range change hover

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="https://www.layuicdn.com/layui/css/layui.css" />
     <script src="./jquery.min.js"></script>
-    <script src="./laydate/laydate.js"></script>
+    <script src="./laydate/laydate.js?v=1.0.1"></script>
     <script src="./date.js"></script>
-    <script src="./kqDatePicker.js"></script>
-    <link rel="stylesheet" href="./kqDatePicker.css"/>
+    <script src="./kqDatePicker.js?v=1.0.1"></script>
+    <link rel="stylesheet" href="./kqDatePicker.css?v=1.0.1"/>
     <style>
         body {
             padding: 20px;
